MAGNOLIA-1875: updated samples content for 3.5; added title and description for freemarker paragraph
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13137 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -1,3 +1,6 @@
 config.menu.config.templates.samples=Sample Templates
 config.menu.config.paragraphs.samples=Sample Paragraphs
 config.menu.config.dialogs.samples=Sample Dialogs
+
+paragraph.samplesFreemarker.title=Samples: Freemarker Paragraph
+paragraph.samplesFreemarker.description=Inserts a paragraph which will be rendered with the configured Freemarker template
