MAGNOLIA-1894: aligned paragraph titles for samples module
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13150 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
@@ -267,7 +267,7 @@ paragraph.devShowWebDAV.title            = Developer's showroom: WebDAV client
 paragraph.download.description           = Upload a file
 paragraph.download.title                 = Samples: Download paragraph
 paragraph.editor.description             = Web content editor with all features (tables, images, styles, ...)
-paragraph.editor.title                   = Editor
+paragraph.editor.title                   = Samples: Editor
 paragraph.formEdit.description           = Single line text input or textarea
 paragraph.formEdit.title                 = Samples: Form: Text field
 paragraph.formProperties.description     = 
