MAGNOLIA-1845: system & admin users menu items now ordered correctly (Users > System Users > Groups > Roles), also when updating from 3.0; re-labeled "Admin Users" to "Users"
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13396 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -164,7 +164,7 @@ menu.roles              = Roles
 menu.search             = Search
 menu.security           = Security
 menu.security.usersSystem	= System Users
-menu.security.usersAdmin	= Admin Users
+menu.security.usersAdmin	= Users
 menu.tools              = Tools
 menu.tools.deployment   = Deployment
 menu.tools.export       = Export
