MAGNOLIA-2338 : a simple plain text template renderer - useful for stuff like css, js, ...
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@17474 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
@@ -250,6 +250,11 @@ dialog.rightColumn.tabText.text.option.email                                  = 
 dialog.rightColumn.tabText.text.option.self                                   = Same browser window
 dialog.rightColumn.tabText.title.label                                        = Title
 
+dialog.plaintext.contentType.label       = Content-type
+dialog.plaintext.contentType.description = The value for the Content-Type header set when rendering this page ("text/css", for example)
+dialog.plaintext.text.label              = Content
+dialog.plaintext.text.description        =
+
 menu.custombutton.example = 
 
 paragraph.devShowAllControls.description = A dialog with all available controls
