MAGNOLIA-2339 i18n-ed hardcoded button label value.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18221 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_en.properties
@@ -229,6 +229,7 @@ dialog.pageProperties.tabGeneral.headerImage.label                            = 
 dialog.pageProperties.tabGeneral.headerImageAlt.description                   = 
 dialog.pageProperties.tabGeneral.headerImageAlt.label                         = Header image's alt text
 dialog.pageProperties.tabGeneral.hideInNav.description                        = 
+dialog.pageProperties.tabGeneral.hideInNav.buttonLabel                        = Do not show this page in the navigation
 dialog.pageProperties.tabGeneral.hideInNav.label                              = 
 dialog.pageProperties.tabGeneral.label                                        = General properties
 dialog.pageProperties.tabGeneral.navTitle.description                         = If empty, the main title is taken
