MAGNOLIA-2363 added multivalue sample texts
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18416 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_es.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_es.properties
@@ -232,6 +232,8 @@ dialog.pageProperties.tabGeneral.navTitle.description                         = 
 dialog.pageProperties.tabGeneral.navTitle.label                               = T\u00edtulo de navegaci\u00f3n
 dialog.pageProperties.tabGeneral.title.description                            =
 dialog.pageProperties.tabGeneral.title.label                                  = T\u00edtulo principal
+dialog.pageProperties.tabGeneral.tags.description                             = Este campo va a hacer mas faciles las busquedas puesto que usa un elmento jcr:multivalue
+dialog.pageProperties.tabGeneral.tags.label                                   = Etiqueta
 dialog.pageProperties.tabMeta.label                                           = Meta
 dialog.pageProperties.tabMeta.metaDescription.label                           = Descripci\u00f3n Meta
 dialog.pageProperties.tabMeta.metaKeywords.label                              = Palabras claves Meta
