MAGNOLIA-2424 - fixing translations - patch from Philippe Marschall
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18902 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_templating_de.properties
@@ -30,7 +30,7 @@ dialog.devShow.allControls.tabLayout.lineSemi.label                           =
 dialog.devShow.allControls.tabLinks.date1.description                         = 
 dialog.devShow.allControls.tabLinks.date1.label                               = Datum
 dialog.devShow.allControls.tabLinks.date2.description                         = 
-dialog.devShow.allControls.tabLinks.date2.label                               = Datum mit Z\ufffdhler
+dialog.devShow.allControls.tabLinks.date2.label                               = Datum mit Z\u00E4hler
 dialog.devShow.allControls.tabLinks.label                                     = Link und Datum
 dialog.devShow.allControls.tabLinks.link.buttonLabel                          = Durchsuchen ...
 dialog.devShow.allControls.tabLinks.link.description                          = Siehe Beispiel-Linkabsatz wie externe und interne Links gehandhabt werden
@@ -48,16 +48,16 @@ dialog.devShow.allControls.tabSelections.checkboxSwich.label                  = 
 dialog.devShow.allControls.tabSelections.label                                = Auswahlen
 dialog.devShow.allControls.tabSelections.radio.description                    = Zeilen=3
 dialog.devShow.allControls.tabSelections.radio.label                          = Radio
-dialog.devShow.allControls.tabSelections.radio.option.blue                    = blau
-dialog.devShow.allControls.tabSelections.radio.option.green                   = Gr\ufffdn
+dialog.devShow.allControls.tabSelections.radio.option.blue                    = Blau
+dialog.devShow.allControls.tabSelections.radio.option.green                   = Gr\u00FCn
 dialog.devShow.allControls.tabSelections.radio.option.orange                  = Orange
 dialog.devShow.allControls.tabSelections.radio.option.red                     = Rot
 dialog.devShow.allControls.tabSelections.radio.option.yellow                  = Gelb
 dialog.devShow.allControls.tabSelections.select.description                   = 
-dialog.devShow.allControls.tabSelections.select.label                         = Ausw\ufffdhlen
+dialog.devShow.allControls.tabSelections.select.label                         = Ausw\u00E4hlen
 dialog.devShow.allControls.tabSelections.select.option.option1                = Wert 1
 dialog.devShow.allControls.tabSelections.select.option.option2                = Wert 2
-dialog.devShow.allControls.tabSelections.select.option.option3                = Wert 3 (ausgew\ufffdhlt=wahr)
+dialog.devShow.allControls.tabSelections.select.option.option3                = Wert 3 (ausgew\u00E4hlt=wahr)
 dialog.devShow.allControls.tabStatic.buttonLarge.buttonLabel                  = Buttonname
 dialog.devShow.allControls.tabStatic.buttonLarge.description                  = 
 dialog.devShow.allControls.tabStatic.buttonLarge.label                        = Name
@@ -74,7 +74,7 @@ dialog.devShow.file.tab0.label                                                =
 dialog.devShow.file.tab0.untitled1.label                                      = Eine Datei hochladen
 dialog.devShow.include.tab0.color1.description                                = Eigene, angepasste Kontrollelemente einbinden
 dialog.devShow.include.tab0.color1.label                                      = Farbe 1
-dialog.devShow.include.tab0.color2.description                                = Beliebige Einstellungswerte \ufffdbergeben und das Kontroll-Jsp wiederverwenden
+dialog.devShow.include.tab0.color2.description                                = Beliebige Einstellungswerte \u00FCbergeben und das Kontroll-Jsp wiederverwenden
 dialog.devShow.include.tab0.color2.label                                      = Farbe 2
 dialog.devShow.include.tab0.label                                             = 
 dialog.devShow.richEdit.tab0.label                                            = 
@@ -90,9 +90,9 @@ dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkTargets.self          = 
 dialog.devShow.richEdit.tab0.richText.optionsToolboxStyleCssClasses.highlight = Hervorgehobener Text
 dialog.devShow.richEdit.tab0.richText.optionsToolboxStyleCssClasses.small     = Kleine Schrift
 dialog.devShow.webDAV.tab0.label                                              = Eine Datei hochladen
-dialog.devShow.webDAV.tab0.link.description                                   = NICHT UNTERST\ufffdTZT IN MAGNOLIA 2.0
+dialog.devShow.webDAV.tab0.link.description                                   = NICHT UNTERST\u00DCTZT IN MAGNOLIA 2.0
 dialog.devShow.webDAV.tab0.link.label                                         = webDAV Link
-dialog.footer.tab0.footerText.label                                           = Zus\ufffdtzliche Fu\ufffdzeile
+dialog.footer.tab0.footerText.label                                           = Zus\u00E4tzliche Fu\u00DFzeile
 dialog.footer.tab0.label                                                      = 
 dialog.form.edit.link.tabProps.spacer.option.doulbe                           = Doppelte Leerzeile
 dialog.form.edit.link.tabProps.spacer.option.single                           = Einzelne Leerzeile
@@ -108,23 +108,23 @@ dialog.form.edit.tabControl.title.label                                       = 
 dialog.form.edit.tabProps.buttonText.description                              = 
 dialog.form.edit.tabProps.buttonText.label                                    = Speichern-Button Text
 dialog.form.edit.tabProps.label                                               = 
-dialog.form.edit.tabProps.lineAbove.buttonLabel                               = Linie \ufffdber diesem Absatz
+dialog.form.edit.tabProps.lineAbove.buttonLabel                               = Linie \u00FCber diesem Absatz
 dialog.form.edit.tabProps.lineAbove.label                                     = Linie
 dialog.form.edit.tabProps.spacer.description                                  = Leere Zeilen unter diesem Absatz
 dialog.form.edit.tabProps.spacer.label                                        = Abstand
 dialog.form.edit.tabProps.spacer.option.no                                    = Kein Abstand
-dialog.form.properties.tab0.cc.label                                          = Cc Empf\ufffdnger
+dialog.form.properties.tab0.cc.label                                          = Cc Empf\u00E4nger
 dialog.form.properties.tab0.from.label                                        = Absender
 dialog.form.properties.tab0.label                                             = Eingabefeld
-dialog.form.properties.tab0.mandatoryAlert.description                        = z.B. Bitte alle Felder ausf\ufffdllen, die mit einem Sternchen markiert sind.
-dialog.form.properties.tab0.mandatoryAlert.label                              = Alarmtext f\ufffdr zwingend erforderliche Textfelder
+dialog.form.properties.tab0.mandatoryAlert.description                        = z.B. Bitte alle Felder ausf\u00FCllen, die mit einem Sternchen markiert sind.
+dialog.form.properties.tab0.mandatoryAlert.label                              = Alarmtext f\u00FCr zwingend erforderliche Textfelder
 dialog.form.properties.tab0.redirect.buttonLabel                              = Durchsuchen...
 dialog.form.properties.tab0.redirect.description                              = 
 dialog.form.properties.tab0.redirect.label                                    = Seite, auf die nach dem Absenden weitergeleitet wird
 dialog.form.properties.tab0.server.label                                      = Mailserver
 dialog.form.properties.tab0.subject.label                                     = Betreff
 dialog.form.properties.tab0.to.description                                    = 
-dialog.form.properties.tab0.to.label                                          = Empf\ufffdnger
+dialog.form.properties.tab0.to.label                                          = Empf\u00E4nger
 dialog.form.selection.link.tabProps.spacer.option.doulbe                      = Doppelte Leerzeile
 dialog.form.selection.link.tabProps.spacer.option.single                      = Einzelne Leerzeile
 dialog.form.selection.tabControl.label                                        = Eingabefeld
@@ -139,7 +139,7 @@ dialog.form.selection.tabControl.type.option.select                           = 
 dialog.form.selection.tabControl.value.description                            = 
 dialog.form.selection.tabControl.value.label                                  = Werte
 dialog.form.selection.tabProps.label                                          = Absatzeinstellungen
-dialog.form.selection.tabProps.lineAbove.buttonLabel                          = Linie \ufffdber diesem Absatz
+dialog.form.selection.tabProps.lineAbove.buttonLabel                          = Linie \u00FCber diesem Absatz
 dialog.form.selection.tabProps.lineAbove.label                                = Linie
 dialog.form.selection.tabProps.spacer.description                             = Leere Zeilen unter diesem Absatz
 dialog.form.selection.tabProps.spacer.label                                   = Abstand
@@ -150,7 +150,7 @@ dialog.mainColumn.download.tabDocument.label                                  = 
 dialog.mainColumn.download.tabDocument.text.description                       = Leer lassen um den Dateinamen zu verlinken
 dialog.mainColumn.download.tabDocument.text.label                             = Verlinker Text
 dialog.mainColumn.download.tabProps.label                                     = Absatzeinstellungen
-dialog.mainColumn.download.tabProps.lineAbove.buttonLabel                     = Linie \ufffdber diesem Absatz
+dialog.mainColumn.download.tabProps.lineAbove.buttonLabel                     = Linie \u00FCber diesem Absatz
 dialog.mainColumn.download.tabProps.lineAbove.label                           = Linie
 dialog.mainColumn.download.tabProps.spacer.description                        = Leere Zeilen unter diesem Absatz
 dialog.mainColumn.download.tabProps.spacer.label                              = Abstand
@@ -170,7 +170,7 @@ dialog.mainColumn.link.tabLink.linkType.option.internal                       = 
 dialog.mainColumn.link.tabLink.text.description                               = Leeres Feld: Externer Linkname=Linkziel, Interner Linkname=Titel der Zielseite
 dialog.mainColumn.link.tabLink.text.label                                     = Link text
 dialog.mainColumn.link.tabProps.label                                         = Absatzeinstellungen
-dialog.mainColumn.link.tabProps.lineAbove.buttonLabel                         = Linie \ufffdber diesem Absatz
+dialog.mainColumn.link.tabProps.lineAbove.buttonLabel                         = Linie \u00FCber diesem Absatz
 dialog.mainColumn.link.tabProps.lineAbove.label                               = Linie
 dialog.mainColumn.link.tabProps.spacer.description                            = Leere Zeilen unter diesem Absatz
 dialog.mainColumn.link.tabProps.spacer.label                                  = Abstand
@@ -184,12 +184,12 @@ dialog.mainColumn.table.tabTable.tableAlignment.label                         =
 dialog.mainColumn.table.tabTable.tableAltBg.buttonLabel                       = Alternierende Hintergrundfarbe
 dialog.mainColumn.table.tabTable.tableAltBg.description                       = 
 dialog.mainColumn.table.tabTable.tableAltBg.label                             = 
-dialog.mainColumn.table.tabTable.tableData.description                        = Tabelleninhalt von z.B. Excel oder Word einf\ufffdgen
+dialog.mainColumn.table.tabTable.tableData.description                        = Tabelleninhalt von z.B. Excel oder Word einf\u00FCgen
 dialog.mainColumn.table.tabTable.tableData.label                              = Tabelleninhalt
 dialog.mainColumn.table.tabTable.tableFontSmall.buttonLabel                   = Kleine Schriftart
 dialog.mainColumn.table.tabTable.tableFontSmall.description                   = 
 dialog.mainColumn.table.tabTable.tableFontSmall.label                         = 
-dialog.mainColumn.table.tabTable.tableHeader.buttonLabel                      = Erste Zeile ist Tabellen\ufffdberschrift
+dialog.mainColumn.table.tabTable.tableHeader.buttonLabel                      = Erste Zeile ist Tabellen\u00FCberschrift
 dialog.mainColumn.table.tabTable.tableHeader.description                      = 
 dialog.mainColumn.table.tabTable.tableHeader.label                            = Optionen
 dialog.mainColumn.table.tabTable.tableLinesHorizontal.buttonLabel             = Horizontale Linien
@@ -205,7 +205,7 @@ dialog.mainColumn.textImage.tabImage.imageFloat.option.left                   = 
 dialog.mainColumn.textImage.tabImage.imageFloat.option.right                  = Bild rechts vom Text
 dialog.mainColumn.textImage.tabImage.label                                    = Bild
 dialog.mainColumn.textImage.tabProps.label                                    = Absatzeinstellungen
-dialog.mainColumn.textImage.tabProps.lineAbove.buttonLabel                    = Linie \ufffdber diesem Absatz
+dialog.mainColumn.textImage.tabProps.lineAbove.buttonLabel                    = Linie \u00FCber diesem Absatz
 dialog.mainColumn.textImage.tabProps.lineAbove.label                          = Linie
 dialog.mainColumn.textImage.tabProps.spacer.description                       = Leere Zeilen unter diesem Absatz
 dialog.mainColumn.textImage.tabProps.spacer.label                             = Abstand
@@ -219,10 +219,10 @@ dialog.mainColumn.textImage.tabText.title.label                               = 
 dialog.pageProperties.label                                                   = Seiteneigenschaften
 dialog.pageProperties.tabGeneral.contentTitle.description                     = Wenn leer, wird der Haupttitel verwendet
 dialog.pageProperties.tabGeneral.contentTitle.label                           = Inhalt Titel
-dialog.pageProperties.tabGeneral.headerImage.description                      = Bild wird abw\ufffdrts vererbt
+dialog.pageProperties.tabGeneral.headerImage.description                      = Bild wird abw\u00E4rts vererbt
 dialog.pageProperties.tabGeneral.headerImage.label                            = Kopfzeilenbild
 dialog.pageProperties.tabGeneral.headerImageAlt.description                   = 
-dialog.pageProperties.tabGeneral.headerImageAlt.label                         = Alt-Text f\ufffdr Kopfzeilenbild
+dialog.pageProperties.tabGeneral.headerImageAlt.label                         = Alt-Text f\u00FCr Kopfzeilenbild
 dialog.pageProperties.tabGeneral.hideInNav.description                        = 
 dialog.pageProperties.tabGeneral.hideInNav.label                              = 
 dialog.pageProperties.tabGeneral.label                                        = Allgemeine Einstellungen
@@ -240,11 +240,11 @@ dialog.rightColumn.tabText.text.option.email                                  = 
 dialog.rightColumn.tabText.text.option.self                                   = Gleiches Browserfenster
 dialog.rightColumn.tabText.title.label                                        = Titel
 
-paragraph.devShowAllControls.description = Ein Dialog mit allen verf\ufffdgbaren Bedienelementen
+paragraph.devShowAllControls.description = Ein Dialog mit allen verf\u00FCgbaren Bedienelementen
 paragraph.devShowAllControls.title       = Developer's showroom: Alle Bedienelemente
-paragraph.devShowDate.description        = Ausgabeoptionen f\ufffdr Datumsanzeige
+paragraph.devShowDate.description        = Ausgabeoptionen f\u00FCr Datumsanzeige
 paragraph.devShowDate.title              = Developer's showroom: Datumsausgabe
-paragraph.devShowFile.description        = Ausgabeoptionen f\ufffdr Dateien
+paragraph.devShowFile.description        = Ausgabeoptionen f\u00FCr Dateien
 paragraph.devShowFile.title              = Developer's showroom: Dateikontrolle
 paragraph.devShowInclude.description     = Eigene JSP-Bedienelemente einbinden
 paragraph.devShowInclude.title           = Developer's showroom: Include control
@@ -264,8 +264,8 @@ paragraph.formSubmit.description         =
 paragraph.formSubmit.title               = Beispiel: Formular: Submit button
 paragraph.link.description               = Internen oder externen Link setzen
 paragraph.link.title                     = Beispiel: Link Absatz
-paragraph.pageFooter.description         = Beispiel Dialog Fu\ufffdzeile
-paragraph.pageFooter.title               = Beispiel: Fu\ufffdzeile
+paragraph.pageFooter.description         = Beispiel Dialog Fu\u00DFzeile
+paragraph.pageFooter.title               = Beispiel: Fu\u00DFzeile
 paragraph.pageProperties.description     = Dialog Seiteneigenschaften
 paragraph.pageProperties.title           = Seiteneigenschaften
 paragraph.rightColumn.description        = 
