--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -179,6 +179,7 @@ menu.tools.owfeExpressions = JCR Workflow Engine
 menu.tools.query           = JCR Queries
 menu.tools.info            = Config Info
 menu.tools.access          = Accesses
+menu.tools.logViewer       = Log Viewer
 
 menu.users					= Users
 menu.website            	= Website
