--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -9,3 +9,5 @@ paragraph.samplesFreemarker.description=Inserts a paragraph which will be render
 
 samples.menu.label=Samples
 samples.config.menu.label=configuration
+samples.filter.menu.label=filter
+samples.servlet.menu.label=servlet
