MAGNOLIA-2506 messages for dialogs and paragraphs
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@20588 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -11,3 +11,39 @@ samples.menu.label=Samples
 samples.config.menu.label=configuration
 samples.filter.menu.label=filter
 samples.servlet.menu.label=servlet
+
+dialog.sampleMain.title=Title
+dialog.sampleMain.text=Text
+dialog.sampleMain.image=Image path
+dialog.sampleMain.date=Date
+
+dialog.sampleProperties.title=Title
+dialog.sampleProperties.text=Text
+dialog.sampleProperties.description=Introduce some formatted text
+
+dialog.sampleSearch.title=Title
+dialog.sampleSearch.text=Text
+dialog.sampleSearch.description=Introduce some formatted text
+
+paragraphs.sampleJSPControlsShowRoom.description=Basic paragraph that demonstrates jsp usage
+paragraphs.sampleJSPControlsShowRoom.title=Controls sample jsp paragraph
+
+paragraphs.sampleFTLControlsShowRoom.description=Basic paragraph that demonstrates freemarker usage
+paragraphs.sampleFTLControlsShowRoom.title=Controls sample freemarker paragraph
+
+paragraphs.sampleFreemarker.description=Basic paragraph that demonstrates freemarker usage
+paragraphs.sampleFreemarker.title=Main sample freemarker paragraph
+
+paragraphs.sampleJSP.description=Basic paragraph that demonstrates jsp usage
+paragraphs.sampleJSP.title=Main sample jsp paragraph
+
+paragraphs.sampleFreemarkerSearch.description=Basic paragraph that demonstrates freemarker usage
+paragraphs.sampleFreemarkerSearch.title=Search sample freemarker paragraph
+
+paragraphs.sampleJSPSearch.description=Basic paragraph that demonstrates jsp usage
+paragraphs.sampleJSPSearch.title=Search sample jsp paragraph
+
+
+
+
+
