MAGNOLIA-1060 added default locale fallback tests to MessagesManager
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21044 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/test/java/info/magnolia/cms/i18n/fakedefault_en.properties
+++ b/magnolia-core/src/test/java/info/magnolia/cms/i18n/fakedefault_en.properties
@@ -1,3 +1,5 @@
 # these are "fake" messages - see MAGNOLIA-2528
 about.title=Magnolia core tests
-about.version=Version
+about.version=Version as defined in default bundle
+other=Other message only defined in default bundle
+another.key=Another key only defined in english default bundle
