MAGNOLIA-2541 due to deprecating messagessutils, we decided to move the messages in admininterface messages-templating... to the new samples module, I've dropped the use of the other languages files.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21105 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
+++ b/magnolia-module-samples/src/main/resources/info/magnolia/module/samples/messages_en.properties
@@ -17,6 +17,97 @@ dialog.sampleSearch.title=Title
 dialog.sampleSearch.text=Text
 dialog.sampleSearch.description=Introduce some formatted text
 
+dialog.devShow.allControls.tabEdits.label                                     = Edit controls
+dialog.devShow.allControls.tabEdits.numberDouble.description                  =
+dialog.devShow.allControls.tabEdits.numberDouble.label                        = Number double
+dialog.devShow.allControls.tabEdits.numberLong.description                    =
+dialog.devShow.allControls.tabEdits.numberLong.label                          = Number long
+dialog.devShow.allControls.tabEdits.text1.description                         =
+dialog.devShow.allControls.tabEdits.text1.label                               = Text 1
+dialog.devShow.allControls.tabEdits.text2.description                         = width=50%
+dialog.devShow.allControls.tabEdits.text2.label                               = Text 2
+dialog.devShow.allControls.tabEdits.text3.description                         = width=150px
+dialog.devShow.allControls.tabEdits.text3.label                               = Text 3
+dialog.devShow.allControls.tabEdits.text4.description                         = rows=4
+dialog.devShow.allControls.tabEdits.text4.label                               = Text 4
+dialog.devShow.allControls.tabFile.file.description                           =
+dialog.devShow.allControls.tabFile.file.label                                 = Upload a file
+dialog.devShow.allControls.tabFile.label                                      = File
+dialog.devShow.allControls.tabLayout.boxType.description                      = boxType=1Col
+dialog.devShow.allControls.tabLayout.boxType.label                            =
+dialog.devShow.allControls.tabLayout.label                                    = Layout options
+dialog.devShow.allControls.tabLayout.line.description                         = line=false
+dialog.devShow.allControls.tabLayout.line.label                               =
+dialog.devShow.allControls.tabLayout.lineSemi.description                     = lineSemi=true
+dialog.devShow.allControls.tabLayout.lineSemi.label                           =
+dialog.devShow.allControls.tabLinks.date1.description                         =
+dialog.devShow.allControls.tabLinks.date1.label                               = Date
+dialog.devShow.allControls.tabLinks.date2.description                         =
+dialog.devShow.allControls.tabLinks.date2.label                               = Date with time
+dialog.devShow.allControls.tabLinks.label                                     = Link and Date
+dialog.devShow.allControls.tabLinks.link.buttonLabel                          = Browse ...
+dialog.devShow.allControls.tabLinks.link.description                          = see sample link paragraph how to handle external and internal links
+dialog.devShow.allControls.tabLinks.link.label                                = Link
+dialog.devShow.allControls.tabRichEdit.label                                  = Rich edit
+dialog.devShow.allControls.tabRichEdit.textRich.description                   = richEdit control with default options
+dialog.devShow.allControls.tabRichEdit.textRich.label                         =
+dialog.devShow.allControls.tabSelections.checkbox.description                 =
+dialog.devShow.allControls.tabSelections.checkbox.label                       = Checkbox
+dialog.devShow.allControls.tabSelections.checkbox.option.bold                 = Bold
+dialog.devShow.allControls.tabSelections.checkbox.option.italic               = Italic
+dialog.devShow.allControls.tabSelections.checkboxSwich.buttonLabel            = On/Off
+dialog.devShow.allControls.tabSelections.checkboxSwich.description            =
+dialog.devShow.allControls.tabSelections.checkboxSwich.label                  = Checkbox switch
+dialog.devShow.allControls.tabSelections.label                                = Selections
+dialog.devShow.allControls.tabSelections.radio.description                    = cols=3
+dialog.devShow.allControls.tabSelections.radio.label                          = Radio
+dialog.devShow.allControls.tabSelections.radio.option.blue                    = blue
+dialog.devShow.allControls.tabSelections.radio.option.green                   = green
+dialog.devShow.allControls.tabSelections.radio.option.orange                  = orangr
+dialog.devShow.allControls.tabSelections.radio.option.red                     = red
+dialog.devShow.allControls.tabSelections.radio.option.yellow                  = yellow
+dialog.devShow.allControls.tabSelections.select.description                   =
+dialog.devShow.allControls.tabSelections.select.label                         = Select
+dialog.devShow.allControls.tabSelections.select.option.option1                = Value 1
+dialog.devShow.allControls.tabSelections.select.option.option2                = Value 2
+dialog.devShow.allControls.tabSelections.select.option.option3                = Value 3 (selected=true)
+dialog.devShow.allControls.tabStatic.buttonLarge.buttonLabel                  = buttonLabel
+dialog.devShow.allControls.tabStatic.buttonLarge.description                  =
+dialog.devShow.allControls.tabStatic.buttonLarge.label                        = label
+dialog.devShow.allControls.tabStatic.buttonSmall.buttonLabel                  = Small button
+dialog.devShow.allControls.tabStatic.buttonSmall.description                  =
+dialog.devShow.allControls.tabStatic.buttonSmall.label                        =
+dialog.devShow.allControls.tabStatic.label                                    = Statics and buttons
+dialog.devShow.allControls.tabStatic.static1.description                      =
+dialog.devShow.allControls.tabStatic.static1.label                            = Static with static value
+dialog.devShow.allControls.tabStatic.static2.description                      = Value of text1
+dialog.devShow.allControls.tabStatic.static2.label                            = Static displaying content
+dialog.devShow.date.tab0.date.description                                     =
+dialog.devShow.date.tab0.date.label                                           = Date and time
+dialog.devShow.date.tab0.label                                                =
+dialog.devShow.file.tab0.label                                                =
+dialog.devShow.file.tab0.untitled1.label                                      = Upload a file
+dialog.devShow.include.tab0.color1.description                                = Include your customized controls
+dialog.devShow.include.tab0.color1.label                                      = Color 1
+dialog.devShow.include.tab0.color2.description                                = Pass any configuration value and re-use your control jsp
+dialog.devShow.include.tab0.color2.label                                      = Color 2
+dialog.devShow.include.tab0.label                                             =
+dialog.devShow.richEdit.tab0.label                                            =
+dialog.devShow.richEdit.tab0.richText.description                             =
+dialog.devShow.richEdit.tab0.richText.label                                   =
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkCssClasses.bgBlue     = Background blue
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkCssClasses.bgRed      = Background red
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkCssClasses.noStyle    = No style
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkTargets.alert         = Alert link value
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkTargets.blank         = New browser window
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkTargets.mailto        = Email link
+dialog.devShow.richEdit.tab0.richText.optionsToolboxLinkTargets.self          = Same browser window
+dialog.devShow.richEdit.tab0.richText.optionsToolboxStyleCssClasses.highlight = Highlighted text
+dialog.devShow.richEdit.tab0.richText.optionsToolboxStyleCssClasses.small     = Small font
+dialog.devShow.webDAV.tab0.label                                              = Upload a file
+dialog.devShow.webDAV.tab0.link.description                                   = NOT SUPPORTED IN MAGNOLIA 2.0
+dialog.devShow.webDAV.tab0.link.label                                         = webDAV link
+
 paragraphs.sampleJSPControlsShowRoom.description=Basic paragraph that demonstrates jsp usage
 paragraphs.sampleJSPControlsShowRoom.title=Controls sample jsp paragraph
 
@@ -34,6 +125,21 @@ paragraphs.sampleFreemarkerSearch.title=Search sample freemarker paragraph
 
 paragraphs.sampleJSPSearch.description=Basic paragraph that demonstrates jsp usage
 paragraphs.sampleJSPSearch.title=Search sample jsp paragraph
+
+paragraph.devShowAllControls.description = A dialog with all available controls
+paragraph.devShowAllControls.title       = Developer's showroom: All controls
+paragraph.devShowDate.description        = Output options of date
+paragraph.devShowDate.title              = Developer's showroom: Date control
+paragraph.devShowFile.description        = Output options for file
+paragraph.devShowFile.title              = Developer's showroom: File control
+paragraph.devShowInclude.description     = Include  your own controls written in jsp
+paragraph.devShowInclude.title           = Developer's showroom: Include control
+paragraph.devShowRichEdit.description    = Customized rich text editor
+paragraph.devShowRichEdit.title          = Developer's showroom: Rich text
+paragraph.devShowWebDAV.description      =
+paragraph.devShowWebDAV.title            = Developer's showroom: WebDAV client
+
+
 
 
 
